; ModuleID = '/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__cannot_add_forbidden_filename_from_filesystem.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/win32/extr_forbidden.c_test_win32_forbidden__cannot_add_forbidden_filename_from_filesystem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"win32-forbidden/aux.\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"foo\0A\00", align 1
@O_RDWR = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [5 x i8] c"aux.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_win32_forbidden__cannot_add_forbidden_filename_from_filesystem() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @repo, align 4
  %3 = call i32 @git_repository_index(i32** %1, i32 %2)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @O_RDWR, align 4
  %6 = load i32, i32* @O_CREAT, align 4
  %7 = or i32 %5, %6
  %8 = call i32 @cl_git_write2file(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 4, i32 %7, i32 438)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_index_add_bypath(i32* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = call i32 @p_unlink(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @cl_must_pass(i32 %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @git_index_free(i32* %14)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @cl_git_write2file(i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i8*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
